--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -11,7 +11,11 @@ on:
         type: string
       build_contexts:
         required: true
-        type: string  # Accepting a string that can be split into multiple contexts
+        type: string
+      build_args:
+        required: false
+        type: string
+        default: ''
 
 env:
   REGISTRY: ghcr.io
@@ -31,6 +35,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'true'
+
+      - name: Extract TAG_BBB from repo
+        id: extract_tag
+        run: |
+          TAG=$(git --git-dir=repos/bigbluebutton/.git describe --tags --always)
+          echo "TAG_BBB=${TAG}" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -53,9 +63,10 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:mod/${{ inputs.image_name }}"
-          build-contexts: ${{ inputs.build_contexts }}  # Using the input for build contexts
+          build-contexts: ${{ inputs.build_contexts }}
           build-args: |
             "BBB_BUILD_TAG=${{ inputs.build_tag }}"
+            ${{ inputs.build_args != '' && inputs.build_args || '' }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
